<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textStyle="bold"
                android:textSize="32sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_actions"
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_actions_desc"
                android:textStyle="italic"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <CheckBox
                android:id="@+id/settingsDisableDeleteDialogCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_delete_dialog"
                android:layout_marginBottom="2dp"/>
            <CheckBox
                android:id="@+id/settingsShowDateCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_date"
                android:checked="true"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_tap_action"
                android:textSize="18sp"
                android:layout_marginBottom="2dp"/>
            <Spinner
                android:id="@+id/settingsShortTapActionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_tap_action"
                android:textSize="18sp"
                android:layout_marginBottom="2dp"/>
            <Spinner
                android:id="@+id/settingsLongTapActionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rendering"
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rendering_desc"
                android:textStyle="italic"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/render_mode_md"
                android:textSize="18sp"
                android:layout_marginBottom="2dp"/>
            <Spinner
                android:id="@+id/settingsRenderMdSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/render_mode_txt"
                android:textSize="18sp"
                android:layout_marginBottom="2dp"/>
            <Spinner
                android:id="@+id/settingsRenderTxtSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/render_mode_html"
                android:textSize="18sp"
                android:layout_marginBottom="2dp"/>
            <Spinner
                android:id="@+id/settingsRenderHtmlSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>